--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .main {
@@ -24,7 +24,7 @@ body {
 section {
   z-index: 9;
   width: 100%;
-  height: 48vh;
+  height: 50vh;
   display: flex;
   /* justify-content: flex-start; */
   align-self: flex-end;
@@ -49,23 +49,23 @@ section {
 .btn .btn-face {
   width: 63%;
   height: 5%;
-  margin-top: 15%;
+  margin-top: 12%;
 }
 
 .btn .btn-insta {
   width: 63%;
   height: 5%;
-  margin-top: 30%;
+  margin-top: 24%;
 }
 
 .btn .btn-whats {
   width: 63%;
   height: 5%;
-  margin-top: 45%;
+  margin-top: 36%;
 }
 
 .btn .btn-store {
   width: 63%;
   height: 5%;
-  margin-top: 60%;
+  margin-top: 48%;
 }
