--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,8 @@ body {
 
 .main {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 1080px;
+  height: 1920px;
 }
 
 .main div img {
@@ -43,7 +43,7 @@ section {
 
 .btn .btn-youtube {
   width: 63%;
-  height: 45px;
+  height: 5%;
 }
 
 .btn .btn-face {
