--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,14 +11,14 @@ body {
 
 .main {
   display: flex;
-  width: 1080px;
-  height: 1920px;
+  width: 100vw;
+  height: 100vh;
 }
 
 .main div img {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
 }
 
 section {
